# haskell

./: .gitignore  class1.1.hs  class1.2.hs  class1.hs  class2.hs  fix_stack.sh  robot.hs  tests.hs
.metals/: metals.lock.db
NumericClasses/: NumericClasses  NumericClasses.cabal  README.md
NumericClasses/src/: Conversions.hs  Main.hs
brittany-record-dot/: README.md  Teste.hs  brittany-record-dot.cabal
brittany-record-dot/src/: Main  Main.hs
clock-type/: README.md  clock-type.cabal
clock-type/src/: Clock.hs
extras/: class1.2.hs  cup.hs  robot.hs  speller.hs
filesTest/: LICENSE  filesTest.cabal  pinkyPromise.txt  todo.txt
filesTest/.stack-work/: stack.sqlite3
filesTest/.stack-work/ghci/0373fb62/: cabal_macros.h
filesTest/src/: Files.hs  Main.hs
functional-problems/: README.md  RPN.hs  functional-problems.cabal
functional-problems/src/: RPN.hs
funsets/: CHANGELOG.md  README.md  funsets.cabal
funsets/src/: Funsets.hs
graph-list/: CHANGELOG.md  LICENSE  README.md  graph-list.cabal  stack-8.8.4.yaml  stack.yaml
graph-list/.hie/: GraphList.hie
graph-list/src/: GraphList.hs
memoise/: README.md  memoise.cabal  stack.yaml
memoise/.stack-work/: stack.sqlite3
memoise/.stack-work/cabal-helper/: Main.hi
memoise/.stack-work/cabal-helper/CabalHelper/Runtime/: Compat.hi  HelperMain.hi
memoise/.stack-work/cabal-helper/CabalHelper/Shared/: Common.hi  InterfaceTypes.hi
memoise/.stack-work/ghci/83cc4c49/: cabal_macros.h
memoise/.stack-work/ghci/8ee71140/: cabal_macros.h
memoise/.stack-work/ghci/99ac26e6/: cabal_macros.h
memoise/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
memoise/src/: Main.hs
multiset-machine/: CHANGELOG.md  LICENSE  README.md  hie.yaml  multiset-machine.cabal
multiset-machine/.hie/: Main.hie  MultisetMachine.hie
multiset-machine/app/: Main.hs
multiset-machine/src/: MultisetMachine.hs
numeric-class/: CHANGELOG.md  README.md  hie.yaml  numeric-class.cabal  stack.yaml
numeric-class/src/: Matrix.hs  Plotting.hs  Prelude.hs  Utilities.hs
numeric-class/src/Roots/: Bissection.hs  FixedPoint.hs  Newton.hs
numericClass/: CHANGELOG.md  README.md  numericClass.cabal
numericClass/app/: Main.hs
numericClass/src/: NumericClass.hs
pipe-operator/: CHANGELOG.md  README.md  pipe-operator.cabal
pipe-operator/src/: PipeOperator.hs
plot-test/: ChangeLog.md  package.yaml  plot-test.cabal  stack.yaml
probFormulas/: CHANGELOG.md  README.md  hie.yaml  probFormulas.cabal  stack.yaml
probFormulas/src/: Area1.hs  Area2.hs  Area3.hs  Prelude.hs  ProbFormulas.hs  ProbGraphs.hs
probTables/: README.md  data.txt  hie.yaml  probTables  probTables.cabal
probTables/.stack-work/: stack.sqlite3
probTables/.stack-work/cabal-helper/: Main.hi
probTables/.stack-work/cabal-helper/CabalHelper/Runtime/: Compat.hi  HelperMain.hi
probTables/.stack-work/cabal-helper/CabalHelper/Shared/: Common.hi  InterfaceTypes.hi
probTables/.stack-work/ghci/1298e429/: cabal_macros.h
probTables/.stack-work/ghci/3bf37de5/: cabal_macros.h
probTables/.stack-work/ghci/fbc9c5de/: cabal_macros.h
probTables/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
probTables/src/: Main.hs  Ranges.hs  Tables.hs
random-test/: CHANGELOG.md  README.md  random-test.cabal
relude-test/: CHANGELOG.md  README.md  relude-test.cabal
relude-test/app/: Main.hs
relude-test/src/: ReludeTest.hs
stack-test/: CHANGELOG.md  LICENSE  README.md  stack-test.cabal
stack-test/.hie/: Main.hie  StackTest.hie
stack-test/app/: Main.hs
stack-test/src/: StackTest.hs
starman/: .travis.yml  CHANGELOG.md  README.md  starman.cabal
starman/app/: Main.hs
starman/src/: Starman.hs
test-project/: CHANGELOG.md  LICENSE  README.md  test-project.cabal
unit2/: .gitignore  ChangeLog.md  package.yaml
unit2/app/: Main.hs
unit2/src/: Capstone.hs  Fun.hs  Lesson12.hs  Lesson13.hs
unit3/: .gitignore  ChangeLog.md  package.yaml
unit3/src/: Capstone.hs  Lesson17.hs  Lesson18.hs  Lesson19.hs  Shape.hs  Store.hs
unit4/: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  hello.txt  hie.yaml  package.yaml  unit4.cabal
unit4/Lesson25/: CHANGELOG.md  Lesson25.cabal  README.md  hello.txt
unit4/Lesson25/app/: Main.hs
unit4/Lesson25/src/: Lesson25.hs
unit4/app/: Main.hs
unit4/src/: Lesson21.hs  Lesson22.hs  Lesson23.hs  Lesson24.hs  Main.hs
unit4/test/: Spec.hs
