name:                clock-type
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aiwaverse/clock-type#readme
license:             BSD3
license-file:        LICENSE
author:              aiwa
maintainer:          aiwavision@protonmail.com
copyright:           2020 aiwa
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable clock-type
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Clock
