name:                filesTest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aiwaverse/filesTest#readme
license:             BSD3
license-file:        LICENSE
author:              aiwa
maintainer:          aiwavision@protonmail.com
copyright:           2020 aiwa
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable filesTest
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Files
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3.3.0 && < 3
