name:                probTables
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aiwaverse/probTables#readme
license:             BSD3
license-file:        LICENSE
author:              aiwa
maintainer:          aiwavision@protonmail.com
copyright:           2020 aiwa
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable probTables
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Ranges
                     , Tables
  build-depends:       base >= 4.7 && < 5
                     , pptable >= 0.3.0 && < 1
                     , vector == 0.12.0.3
                     , containers == 0.6.0.1
