cabal-version:       2.4
name:                relude-test
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Aiwa
maintainer:          Aiwa <aiwavision@protonmail.com>
copyright:           2020 Aiwa
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.2

common common-options
  build-depends:       base ^>= 4.13.0.0
                    ,  relude
                    ,  vector
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables
                       TypeApplications
                       ViewPatterns
                       FlexibleContexts

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     ReludeTest

executable relude-test
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       relude-test
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
